<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.tao</groupId>
    <artifactId>ai-code-review</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>ai-code-review-api</module>
        <module>ai-code-review-app</module>
        <module>ai-code-review-domain</module>
        <module>ai-code-review-trigger</module>
        <module>ai-code-review-infrastructure</module>
        <module>ai-code-review-types</module>
    </modules>

    <properties>
        <!--project-->
        <project.version>1.0-SNAPSHOT</project.version>
        <!--java-->
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!--spring-boot-->
        <spring-boot.version>3.2.4</spring-boot.version>
        <spring-ai-vetsion>1.0.0-M6</spring-ai-vetsion>
        <!--数据库-->
        <mybatis.version>2.1.4</mybatis.version>
        <mybatis-plus.version>3.5.3</mybatis-plus.version>
        <mysql.version>8.0.23</mysql.version>
        <shardingsphere.version>5.3.2</shardingsphere.version>
        <!--工具-->
        <fastjson.version>2.0.28</fastjson.version>
        <commons-lang3.version>3.9</commons-lang3.version>
        <commons-codec.version>1.15</commons-codec.version>
        <guava.version>32.1.3-jre</guava.version>
        <dom4j.version>1.6.1</dom4j.version>
        <xstream.version>1.4.10</xstream.version>
        <jjwt.version>0.9.1</jjwt.version>
        <java-jwt.version>4.4.0</java-jwt.version>
        <redisson-spring.version>3.23.4</redisson-spring.version>
        <hutools.version>5.8.18</hutools.version>
        <!-- 接口文档 -->
        <knife4j.version>4.5.0</knife4j.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- spring-boot-dependencies -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>${spring-ai-vetsion}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- 数据库 -->
            <dependency>
                <groupId>org.mybatis.spring.boot</groupId>
                <artifactId>mybatis-spring-boot-starter</artifactId>
                <version>${mybatis.version}</version>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-boot-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>${mysql.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.shardingsphere</groupId>
                <artifactId>shardingsphere-jdbc-core</artifactId>
                <version>${shardingsphere.version}</version>
            </dependency>

            <!--缓存-->
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>org.redisson</groupId>
                <artifactId>redisson-spring-boot-starter</artifactId>
                <version>${redisson-spring.version}</version>
            </dependency>

            <!--工具-->
            <!--fastjson-->
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>fastjson</artifactId>
                <version>${fastjson.version}</version>
            </dependency>
            <!--commons-lang3-->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>
            <!--commons-codec-->
            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>${commons-codec.version}</version>
            </dependency>
            <!--hutools-->
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>${hutools.version}</version>
            </dependency>
            <!--dom4j-->
            <dependency>
                <groupId>dom4j</groupId>
                <artifactId>dom4j</artifactId>
                <version>${dom4j.version}</version>
            </dependency>
            <!--xstream-->
            <dependency>
                <groupId>com.thoughtworks.xstream</groupId>
                <artifactId>xstream</artifactId>
                <version>${xstream.version}</version>
            </dependency>
            <!--jjwt-->
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <!--java-jwt-->
            <dependency>
                <groupId>com.auth0</groupId>
                <artifactId>java-jwt</artifactId>
                <version>${java-jwt.version}</version>
            </dependency>

            <!-- 接口文档相关依赖 -->
            <dependency>
                <groupId>com.github.xiaoymin</groupId>
                <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
                <version>${knife4j.version}</version>
            </dependency>

            <!-- 工程模块 -->
            <dependency>
                <groupId>com.tao</groupId>
                <artifactId>ai-code-review-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.tao</groupId>
                <artifactId>ai-code-review-trigger</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.tao</groupId>
                <artifactId>ai-code-review-domain</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.tao</groupId>
                <artifactId>ai-code-review-infrastructure</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.tao</groupId>
                <artifactId>ai-code-review-types</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.7</version>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>dev</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <java_jvm>-Xms1G -Xmx1G -server -XX:MaxPermSize=256M -Xss256K -Dspring.profiles.active=test
                    -XX:+DisableExplicitGC -XX:+UseG1GC -XX:LargePageSizeInBytes=128m -XX:+UseFastAccessorMethods
                    -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/export/Logs/ai-code-review-boot
                    -Xloggc:/export/Logs/ai-code-review-boot/gc-ai-code-review-boot.log -XX:+PrintGCDetails
                    -XX:+PrintGCDateStamps
                </java_jvm>
                <profileActive>dev</profileActive>
            </properties>
        </profile>
        <profile>
            <id>test</id>
            <properties>
                <java_jvm>-Xms1G -Xmx1G -server -XX:MaxPermSize=256M -Xss256K -Dspring.profiles.active=test
                    -XX:+DisableExplicitGC -XX:+UseG1GC -XX:LargePageSizeInBytes=128m -XX:+UseFastAccessorMethods
                    -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/export/Logs/ai-code-review-boot
                    -Xloggc:/export/Logs/ai-code-review-boot/gc-ai-code-review-boot.log -XX:+PrintGCDetails
                    -XX:+PrintGCDateStamps
                </java_jvm>
                <profileActive>test</profileActive>
            </properties>
        </profile>
        <profile>
            <id>prod</id>
            <properties>
                <java_jvm>-Xms6G -Xmx6G -server -XX:MaxPermSize=256M -Xss256K -Dspring.profiles.active=release
                    -XX:+DisableExplicitGC -XX:+UseG1GC -XX:LargePageSizeInBytes=128m -XX:+UseFastAccessorMethods
                    -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/export/Logs/fq-mall-activity-app
                    -Xloggc:/export/Logs/ai-code-review-boot/gc-ai-code-review-boot.log -XX:+PrintGCDetails
                    -XX:+PrintGCDateStamps
                </java_jvm>
                <profileActive>prod</profileActive>
            </properties>
        </profile>
    </profiles>

</project>
